--- a/nav-demo/index.html
+++ b/nav-demo/index.html
@@ -14,8 +14,14 @@
 </head>
 
 <body>
-    <header>
-
+    <header id="head">
+        <div class="left">小菜同学的导航页面</div>
+        <div class="right">
+            <input type="text">
+            <button>百度搜索</button>
+            <button>谷歌搜索</button>
+        </div>
+        <div class="clear"></div>
     </header>
     <main>
         <div id='mainx' class="wrapper"></div>
@@ -67,6 +73,7 @@
 
             }
         }
+
         //footer
         copyrightx = dc('div')
         copyrightx.className = 'copyright'
