--- a/canvas/index.html
+++ b/canvas/index.html
@@ -5,104 +5,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,minmum-scale=1">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="./main.js"></script>
+
+    <style>
+
+    </style>
 </head>
 
 <body>
-    <canvas id="xxx" width="300px" height="150px">  
-  </canvas>
-    <button id="eraser">橡皮擦</button>
-    <script>
-        var yyy = document.getElementById('xxx');
-        setcanvasSize()
+    <canvas id="canvas" width="300px" height="150px">
+</canvas>
+    <button id="eraser" class="eraser"></button>
+    <ul>
+        <li id="red"></li>
+        <li id="green"></li>
+        <li id="blue"></li>
+        <li id="black"></li>
+        <li id="clearscreen"></li>
+        <li id="download"></li>
+        <div class="clear"></div>
+    </ul>
+    <ol>
+        <li id="line1"></li>
+        <li id="line2"></li>
+        <li id="line3"></li>
 
-        var ctx = yyy.getContext('2d'); //canvas必写
-        window.onresize = function() {
-            setcanvasSize()
-        }
-        var useEraser = false
-        eraser.onclick = function() {
-            useEraser = !useEraser
-        }
+    </ol>
 
-
-
-
-        var useing = false; //是否在使用
-        var lastpoint = {
-            x: undefined,
-            y: undefined
-        };
-        //鼠标动作
-        yyy.onmousedown = function(aaa) {
-
-            var x = aaa.clientX;
-            var y = aaa.clientY;
-            if (useEraser) {
-                useing = true;
-                ctx.clearRect(x, y, 10, 10)
-            } else {
-                useing = true;
-                lastpoint = {
-                    "x": x,
-                    "y": y
-                };
-            }
-
-
-        };
-
-        yyy.onmousemove = function(aaa) {
-            var x = aaa.clientX;
-            var y = aaa.clientY;
-            if (useEraser) {
-                ctx.clearRect(x, y, 10, 10)
-            } else {
-                if (useing) {
-
-                    var newpoint = {
-                        "x": x,
-                        "y": y
-                    };
-                    drawline(lastpoint.x, lastpoint.y, newpoint.x, newpoint.y);
-
-                }
-                lastpoint = newpoint;
-
-            }
-        };
-        yyy.onmouseup = function(aaa) {
-            useing = false;
-        };
-        eraser.onclick = function(bbb) {
-                useEraser = !useEraser
-                if (useEraser) {
-                    eraser.textContent = '画笔'
-                } else {
-                    eraser.textContent = '橡皮擦'
-                }
-
-            }
-            //函数
-            //在两个点之间画线
-        function drawline(x1, y1, x2, y2) {
-            ctx.beginPath();
-            ctx.strokeStyle = 'black';
-            ctx.moveTo(x1, y1);
-            ctx.linewidth = 5;
-            ctx.lineTo(x2, y2);
-            ctx.stroke();
-            ctx.closePath();
-        }
-
-        function setcanvasSize() {
-            var pageWidth = document.documentElement.clientWidth;
-            var pageHeight = document.documentElement.clientHeight;
-            yyy.width = pageWidth;
-            yyy.height = pageHeight;
-        }
+    <script src="main.js">
     </script>
 </body>
 
